# manipulator_assignment

./: README.md
manipulator_controller/: CMakeLists.txt  package.xml
manipulator_controller/include/manipulator_controller/: waypoint_test.hpp
manipulator_controller/src/: plan_and_execute.cpp  waypoint_following.cpp
manipulator_description/rviz/: display.rviz
manipulator_moveit/: CMakeLists.txt  package.xml
manipulator_moveit/config/: arm_manipulator.srdf  arm_manipulator.urdf.xacro
manipulator_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
src/manipulator_controller/config/: manipulator_controllers.yaml
src/manipulator_controller/include/manipulator_controller/: plan_and_execute.hpp  waypoint_following.hpp
src/manipulator_controller/launch/: manipulator_controller.launch.py
src/manipulator_controller/src/: waypoint_test.cpp
src/manipulator_description/: CMakeLists.txt  package.xml
src/manipulator_description/launch/: display.launch.py  gazebo.launch.py
src/manipulator_description/urdf/: manipulator.urdf.xacro  manipulator_gazebo.xacro  manipulator_ros2_control.xacro
src/manipulator_moveit/: .setup_assistant
src/manipulator_moveit/config/: arm_manipulator.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/manipulator_moveit/launch/: rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
